--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -41,8 +41,8 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container_shop_item"
-        app:layout_constraintStart_toStartOf="@id/guideline_middle"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline_middle"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
