ContentProvider: add UriMatcher

--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.shoppinglist.presentation.ShopItemViewModel" />
+            type="com.example.shoppingList.presentation.ShopItemViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
